# qos

./: .gitignore  LICENSE  README.md
qos-01/: README.md  README_CZ.md  pyproject.toml
qos-01/qos_01/: exercise.ipynb
qos-01/qos_01/lib/: core.py
qos-02/: README.md  README_CZ.md  pyproject.toml
qos-02/qos_02/: exercise_02.ipynb  graphs.py
qos-02/qos_02/lib/: ShaperExample1.py  WFQueueExample.py  core.py  params.py
qos-03/: README.md  pyproject.toml
qos-03/qos_03/: README.md  exercise_03.ipynb
qos-03/qos_03/lib/: Untitled.ipynb  core.py  sock.py
qos-03/qos_03/pcap/: asterisk-echo-test.pcapng
qos-04/: README.md  pyproject.toml
qos-04/qos_04/: exercise_04.ipynb
qos-05/: exercise_05.ipynb
qos-05/qos_05/: exercise_05.ipynb
qos-06/: exercise_06.ipynb
qos-07/: README.md  exercise_07.ipynb
support/: armstrong.pcap  markov-students.ipynb
support/01/: Voice 240911_120121(1).m4a  ex01(1).ipynb  ex01.ipynb
support/02/: support_03.ipynb
support/04/: Untitled.ipynb
