[tool.poetry]
name = "qos-02"
version = "0.1.0"
description = ""
authors = ["Jan Rozhon <jan.rozhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
simpy = "^4.1.1"
networkx = "^3.3"
loguru = "^0.7.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
